[package]
name = "Gyndowind"
version = "0.0.1"
description = "筋斗云"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.5", features = [ "api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
